updated libs and build script